<resources>
    <string name="app_name">碎碎念</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">首页</string>
    <string name="nav_collection">收藏</string>

    <string name="zhihu_daily">知乎日报</string>
    <string name="guokr_handpick">果壳精选</string>
    <string name="douban_moment">豆瓣一刻</string>

    <!--常用-->
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="share_error">分享失败</string>

    <string name="title_activity_read">阅读</string>
    <string name="title_activity_guokr_read">果壳精选</string>
    <string name="loading_more">正在加载…</string>
    <string name="loaded_failed">加载失败!</string>
    <string name="retry">重试</string>
    <string name="copied_to_clipboard">复制成功</string>
    <string name="copied_to_clipboard_failed">复制失败</string>
    <string name="added_to_bookmarks">已添加到收藏</string>
    <string name="deleted_from_bookmarks">已从收藏中删除</string>

    <string name="feel_lucky">随便看看</string>
    <string name="feel_lucky_short">随便看看</string>
    <string name="search_bookmarks">搜索收藏</string>
    <string name="check_bookmarks">查看收藏</string>

    <!--bottom sheet list-->
    <string name="action_add_to_bookmarks">添加到收藏</string>
    <string name="action_delete_from_bookmarks">取消收藏</string>
    <string name="action_copy_link">复制链接</string>
    <string name="action_open_in_browser">在浏览器中打开</string>
    <string name="action_copy_text">复制内容文本</string>
    <string name="action_share_as_text">作为文本分享</string>

    <!--main menu-->
    <string name="change_theme">切换主题</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <!--navigation view menu end-->

    <string name="share_extra">分享自 碎碎念</string>
    <string name="share_to">分享至</string>
    <string name="no_browser_found">没有安装浏览器</string>

    <string name="auth_name">作者姓名</string>
    <string name="auth_name_text">王凯岩</string>
    <string name="auth_no">作者学号</string>
    <string name="auth_no_text">55130114</string>
    <string name="pro_name">项目名称</string>
    <string name="pro_name_text">毕业设计 : 碎碎念 —— 碎片化阅读 </string>

    <!--fragment_system_settings-->
    <string name="basic_settings">阅读设置</string>
    <string name="no_picture_mode">无图模式</string>
    <string name="no_picture_mode_description">阅读时不再加载图片</string>
    <string name="in_app_browser">使用内置浏览器</string>
    <string name="in_app_browser_description">app内部查看文章内链接</string>
    <string name="time_of_saving_articles">文章保存时间</string>
    <string name="other_settings">其他设置</string>
    <string name="clear_image_cache">清除图片缓存</string>
    <string name="clear_image_cache_successfully">清理成功</string>
    <!--setting-->

    <string name="network_error">网络走丢了…点击重试</string>
    <string name="refresh">刷新</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
