<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group_main">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_bookmark_black_48px"
            android:title="@string/nav_collection" />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/group_other">
        <item android:id="@+id/nav_change_theme"
            android:title="@string/change_theme"
            android:icon="@drawable/ic_style_black_48px" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48px"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_details_black_48px"
            android:title="@string/about" />
    </group>

</menu>